--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,51 +1,66 @@
-name: Deploy Lambda Function
+# This is a basic workflow to help you get started with Actions
 
+name: deploy
+
+# Controls when the workflow will run
 on:
+  # Triggers the workflow on push or pull request events but only for the "main" branch
   push:
-    branches: [ main ]
+    branches: [ "main" ]
+  pull_request:
+    branches: [ "main" ]
 
+  # Allows you to run this workflow manually from the Actions tab
+  workflow_dispatch:
+
+# A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-
-  deploy:
+  # This workflow contains a single job called "build"
+  build:
+    # The type of runner that the job will run on
     runs-on: ubuntu-latest
-    
+
+    # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
-    - uses: actions/checkout@v2
-    
-    - name: Set up Python
-      uses: actions/setup-python@v4
-      with:
-        python-version: '3.10'
+      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
+      - uses: actions/checkout@v3
+
+      - name: Set up Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: '3.10.12'
+      - name: Install dependencies
+        run: |
+            python -m pip install --upgrade pip
+            pip install -r requirements.txt
+      - name: Flake8
+        run: |
+              autopep8 --in-place --aggressive --aggressive app.py app2.py
+              flake8
         
-    - name: Set up virtual enviroment
-      run: |
-        python -m venv env
-        source env/bin/activate
+      - name: Configure AWS Credentials
+        uses: aws-actions/configure-aws-credentials@v4
+        with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-session-token: ${{secrets.AWS_SESSION_TOKEN}}
+          aws-region: us-east-1
+          
+      - name: List buckets
+        run: aws s3 ls
         
-    - name: Install dependencies
-      run: |
-        source env/bin/activate
-        python -m pip install --upgrade pip
-        pip install -r requirements.txt
-        
-    - name: auto
-      run: |
-        pip install autopep8
-        autopep8 --in-place --aggressive --aggressive app.py
-        
-    - name: Flake8
-      run: |
-        pip install flake8
-        flake8 app.py
-    
-    - name: Configure AWS Credentials
-      uses: aws-actions/configure-aws-credentials@v4
-      with:
-        aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-        aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-        aws-session-token: ${{ secrets.AWS_SESSION_TOKEN }}
-        aws-region: us-east-1
-    
-    - name: cli
-      run: |
-          aws s3 ls
+      - name: lambda_1
+        run: |
+          python -m venv env
+          source env/bin/activate
+          pip install urllib3==1.26.7
+          pip install zappa
+          pip freeze > requirements.txt 
+          
+      - name: Despliegue de funciones con Zappa
+        run: |
+          source env/bin/activate
+          pwd
+          zappa update dev
+          zappa update dev2
+          zappa invoke dev lambda.f
