--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -61,4 +61,4 @@ jobs:
           pwd
           zappa update dev
           zappa update dev2
-          zappa invoke dev lambda.f
+          zappa invoke dev app.f
