--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -33,7 +33,7 @@ jobs:
             pip install -r requirements.txt
       - name: Flake8
         run: |
-              autopep8 --in-place --aggressive --aggressive app.py app2.py
+              autopep8 --in-place --aggressive --aggressive app.py app2.py test_app2.py
               flake8
         
       - name: Configure AWS Credentials
