Update zappa settigns dev2

--- a/zappa_settings.json
+++ b/zappa_settings.json
@@ -2,16 +2,16 @@
      "dev": {
         "app_function": "app.f",
         "aws_region": "us-east-1",
-        "project_name": "Parcial",
+        "project_name": "examen",
         "runtime": "python3.10",
-        "s3_bucket": "Parcialdef",
+        "s3_bucket": "parcial-def",
         "keep_warm": false,
         "apigateway_enabled": false,
         "manage_roles": false,
         "role_name": "LabRole",
         "events": [
             {
-                "function": "lambda.f",
+                "function": "app.f",
                 "expression": "cron(45 4 * * ? *)"  
             }
         ]
@@ -24,15 +24,19 @@
         "role_name": "LabRole",
         "manage_roles": false,
         "apigateway_enabled": false,
-        "project_name": "Parcialdef",
+        "project_name": "examen",
         "runtime": "python3.10",
         "s3_bucket": "parcial-final",
-        "events": [
+       "events": [
             {
                 "function": "app2.handler",
-                "expression": "cron(5 12 * * ? *)"
+                "event_source": {
+                    "arn":  "arn:aws:s3:::parcial-final"
+                    "events": [
+                        "s3:ObjectCreated:*"
+                    ]
+                }
             }
         ]
     }
-
-}
+}    
