--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -34,7 +34,7 @@ jobs:
       - name: Flake8
         run: |
               autopep8 --in-place --aggressive --aggressive app.py app2.py test_app2.py
-              flake8
+              flake8 app.py app2.py test_app2.py
         
       - name: Configure AWS Credentials
         uses: aws-actions/configure-aws-credentials@v4
@@ -54,6 +54,11 @@ jobs:
           pip install urllib3==1.26.7
           pip install zappa
           pip freeze > requirements.txt 
+      
+      - name: Pruebas Unitarias Pytest
+        run: |
+          pytest test_app2.py
+          python3 -v
           
       - name: Despliegue de funciones con Zappa
         run: |
